# TimeSeriesForecast

./: .gitignore  README.md  forecast.py  pyproject.toml  requirements.txt  setup.py
docs/: README_en.md  README_ja.md  README_zh-CN.md  README_zh-TW.md
examples/: sample_data.csv
models/: __init__.py  base.py  exponential_smoothing.py  linear_trend.py  moving_average.py  simple_regression.py
tests/: test_models.py
utils/: __init__.py  data_loader.py  data_processor.py  output_formatter.py
visualization/: __init__.py  ascii_chart.py  chart_generator.py
