[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "TimeSeriesForecast"
version = "1.0.0"
description = "Lightweight Zero-Dependency Time Series Forecasting CLI Tool"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "GitStQ", email = "gitstq@example.com"}
]
keywords = [
    "time-series",
    "forecasting",
    "cli",
    "prediction",
    "zero-dependency",
    "lightweight"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
matplotlib = [
    "matplotlib>=3.5.0",
]

[project.scripts]
forecast = "forecast:main"

[project.urls]
Homepage = "https://github.com/gitstq/TimeSeriesForecast"
Documentation = "https://github.com/gitstq/TimeSeriesForecast#readme"
Repository = "https://github.com/gitstq/TimeSeriesForecast"
Issues = "https://github.com/gitstq/TimeSeriesForecast/issues"
Changelog = "https://github.com/gitstq/TimeSeriesForecast/releases"

[tool.setuptools]
packages = ["models", "utils", "visualization"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["models", "utils", "visualization"]
omit = ["tests/*", "setup.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
